--- a/package.json
+++ b/package.json
@@ -12,5 +12,10 @@
     "license": "ISC",
     "dependencies": {
         "discord.js": "^14.14.1"
+    },
+    "devDependencies": {
+        "@types/jest": "^29.5.11",
+        "jest": "^29.7.0",
+        "ts-jest": "^29.1.1"
     }
 }
