--- a/package.json
+++ b/package.json
@@ -2,13 +2,18 @@
     "name": "discordjs-choice-selectmenu-builder",
     "version": "1.0.0",
     "description": "A utility builder to represent arrays as paginated Discord select menus.",
-    "main": "index.js",
+    "main": "./dist/ChoiceSelectMenuBuilder.js",
     "scripts": {
         "build": "tsc.cmd",
         "test": "jest"
     },
-    "keywords": [],
-    "author": "",
+    "keywords": [
+        "discordjs",
+        "pagination",
+        "typescript",
+        "npm"
+    ],
+    "author": "LeCarbonator",
     "license": "ISC",
     "dependencies": {
         "discord.js": "^14.14.1"
@@ -16,6 +21,15 @@
     "devDependencies": {
         "@types/jest": "^29.5.11",
         "jest": "^29.7.0",
-        "ts-jest": "^29.1.1"
-    }
+        "ts-jest": "^29.1.1",
+        "typescript": "^5.3.3"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/LeCarbonator/discordjs-choice-selectmenu-builder.git"
+    },
+    "bugs": {
+        "url": "https://github.com/LeCarbonator/discordjs-choice-selectmenu-builder/issues"
+    },
+    "homepage": "https://github.com/LeCarbonator/discordjs-choice-selectmenu-builder"
 }
