--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
     "name": "discordjs-choice-selectmenu-builder",
     "version": "1.0.0",
     "description": "A utility builder to represent arrays as paginated Discord select menus.",
-    "main": "./dist/ChoiceSelectMenuBuilder.js",
+    "main": "./dist/index.js",
+    "module": "./dist/index.mjs",
+    "types": "./dist/index.d.ts",
+    "files": [
+        "dist"
+    ],
     "scripts": {
-        "build": "tsc.cmd",
+        "build": "tsup",
         "test": "jest"
     },
     "keywords": [
@@ -22,6 +27,7 @@
         "@types/jest": "^29.5.11",
         "jest": "^29.7.0",
         "ts-jest": "^29.1.1",
+        "tsup": "^8.0.2",
         "typescript": "^5.3.3"
     },
     "repository": {
