--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,35 @@
 {
     "compilerOptions": {
-        "target": "ES2022",
-        "module": "NodeNext",
-        "lib": ["ES2022"],
-        "moduleResolution": "NodeNext",
-        "outDir": "./dist",
+        "allowUnreachableCode": false,
+        "allowUnusedLabels": false,
+        "exactOptionalPropertyTypes": true,
+        "noFallthroughCasesInSwitch": false,
+        "noImplicitOverride": true,
+        "noImplicitReturns": true,
+        "noPropertyAccessFromIndexSignature": true,
+        "noUncheckedIndexedAccess": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
         "strict": true,
-        "strictPropertyInitialization": false,
-        "exactOptionalPropertyTypes": false,
-        "sourceMap": false,
-        "esModuleInterop": true,
+        "allowArbitraryExtensions": false,
+        "allowImportingTsExtensions": false,
+        "module": "ESNext",
+        "moduleResolution": "Bundler",
+        "declaration": true,
+        "declarationMap": true,
+        "importHelpers": false,
+        "newLine": "lf",
+        "noEmitHelpers": true,
+        "outDir": "dist",
+        "preserveConstEnums": true,
+        "removeComments": false,
+        "sourceMap": true,
+        "allowSyntheticDefaultImports": true,
+        "esModuleInterop": false,
         "forceConsistentCasingInFileNames": true,
-        "resolveJsonModule": true,
-        "experimentalDecorators": true
+        "isolatedModules": true,
+        "lib": ["ESNext"],
+        "target": "ESNext"
     },
     "include": ["src/**/*.ts", "src/**/*.tsx"],
     "exclude": ["tests/**/*", "node_modules/**/*"]
