implement PageManager into builder

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     ],
     "scripts": {
         "build": "tsc --noEmit && tsup",
-        "test": "npm run build && jest"
+        "test": "jest"
     },
     "keywords": [
         "discord",
